Added format and bitrate support to the configuration 	modified:   config.json

--- a/config.json
+++ b/config.json
@@ -3,6 +3,8 @@
         "selected_lang" : "default"
     },
     "general": {
-        "download_path": "default"
+        "download_path": "default",
+        "format": "mp4",
+        "bitrate": "120"
     }
 }
